# fastmcp-flyio

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
src/flymcp/: __init__.py  flymcp.py
